@@ -1,5 +1,11 @@
 2009-09-09  Alan Modra  <amodra@bigpond.net.au>
 
+	* config/obj-coff.h (USE_UNIQUE): Don't define.
+	* config/obj-coff.c (weak_uniquify): Use an_external_name when TE_PE.
+	* symbols.c (an_external_name): Define when TE_PE.
+	(S_SET_EXTERNAL): Assign an_external_name when TE_PE.
+	* tc.h (an_external_name): Declare when TE_PE.
+
 	* config/tc-i386.c (i386_target_format): Avoid duplicate case label.
 
 2009-09-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
